terraform/igw.tf
# Pour fournir un accès internet aux sous reseaux publiques
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-${var.environment}-igw"
  }
}
